# TP_C_task-2

./: .travis.yml  CMakeLists.txt  README.md
dynamic_library/: dlib_includes.h  dynamic_library.c
include/: config.h  config.h.in  lib_includes.h  time_test_funcs.h  timer.h
libraries/: dynamic_library.c  static_library.c
library_dynamic/: dynamic_library.c
library_static/: library.c
src/: dynamic_test.c  dynamic_time_measure.c  main.c  static_test.c  static_time_measure.c  time_test_funcs.c  timer.c
tests/: CMakeLists.txt  tests.cpp
unit_tests/: CMakeLists.txt  dynamic_tests.cpp  static_tests.cpp  tests.cpp
